--- a/templates/base.html
+++ b/templates/base.html
@@ -131,6 +131,7 @@
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('password_generator') }}">Password Generator</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('unit_converter') }}">Unit Converter</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('age_calculator') }}">Age Calculator</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('image_compressor') }}">Image Compressor</a></li>
                 </ul>
             </div>
         </nav>
