--- a/new_app/templates/base.html
+++ b/new_app/templates/base.html
@@ -27,6 +27,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1F35JW1ZG3"></script>
     <script>
